REGRESSION(r149647): Assertion failure in LocalStorageDatabaseTracker::setLocalStorageDirectoryInternal https://bugs.webkit.org/show_bug.cgi?id=115711

Rubber-stamped by Anders Carlsson.

Temporarily removed the assertion. Andres is going to investigate it tomorrow.

* UIProcess/Storage/LocalStorageDatabaseTracker.cpp:
(WebKit::LocalStorageDatabaseTracker::setLocalStorageDirectoryInternal):


Canonical link: https://commits.webkit.org/134123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149662 268f45cc-cd09-0410-ab3c-d52691b4dbfc